--- a/win-pcbiounlock/win-pcbiounlock/win-pcbiounlock.vcxproj.filters
+++ b/win-pcbiounlock/win-pcbiounlock/win-pcbiounlock.vcxproj.filters
@@ -121,6 +121,9 @@
     <ClInclude Include="..\..\common-cpp\utils\Utils.h">
       <Filter>common-cpp</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common-cpp\api\api.h">
+      <Filter>common-cpp</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
