Use CMake on Windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .idea
+pam-pcbiounlock/.idea
 pam-pcbiounlock/build
 pam-pcbiounlock/cmake-build-debug
 pam-pcbiounlock/cmake-build-release
 pam-pcbiounlock/toolchain
+pam-pcbiounlock/pcbu-auth/.idea
 pam-pcbiounlock/pcbu-auth/build
 pam-pcbiounlock/pcbu-auth/cmake-build-debug
 pam-pcbiounlock/pcbu-auth/cmake-build-release
-win-pcbiounlock/win-pcbiounlock/.vs
-win-pcbiounlock/win-pcbiounlock/x64
-win-pcbiounlock/win-pcbiounlock/test/x64
-win-pcbiounlock/win-pcbiounlock/ARM64
-win-pcbiounlock/win-pcbiounlock/test/ARM64
+win-pcbiounlock/.idea
+win-pcbiounlock/build
+win-pcbiounlock/cmake-build-debug
+win-pcbiounlock/cmake-build-release
