Windows multi user support

--- a/win-pcbiounlock/CMakeLists.txt
+++ b/win-pcbiounlock/CMakeLists.txt
@@ -4,12 +4,12 @@ project(win-pcbiounlock)
 set(CMAKE_CXX_STANDARD 17)
 
 message("-- Building for arch '${CMAKE_VS_PLATFORM_NAME}'")
-set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64")
-#set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64-ARM")
-
 if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
     set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64")
 elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM64")
+    set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64-ARM")
+else()
+    #set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64")
     set(OPENSSL_ROOT_DIR "C:/Program Files/OpenSSL-Win64-ARM")
 endif()
 
@@ -18,25 +18,22 @@ add_subdirectory(common-cpp/deps/spdlog)
 
 add_compile_definitions(_WIN32 WIN32 SAMPLEV2CREDENTIALPROVIDER_EXPORTS _WINDOWS _USRDLL UNICODE _UNICODE)
 add_library(win-pcbiounlock SHARED
-        resource.h
-        win-pcbiounlock.def
-        src/CMessageCredential.h
+        src/win-pcbiounlock.def
+        src/resource.rc
         src/common.h
-        src/CSampleProvider.h
-        src/CUnlockCredential.h
-        src/CUnlockListener.h
-        src/Dll.h
-        src/guid.h
-        src/helpers.h
-        src/resource.h
         src/WinUtils.h
-        src/CMessageCredential.cpp
-        src/CSampleProvider.cpp
-        src/CUnlockCredential.cpp
-        src/CUnlockListener.cpp
-        src/Dll.cpp
+        src/guid.h
         src/guid.cpp
+        src/Dll.h
+        src/Dll.cpp
+        src/helpers.h
         src/helpers.cpp
+        src/CSampleProvider.h
+        src/CSampleProvider.cpp
+        src/CUnlockCredential.h
+        src/CUnlockCredential.cpp
+        src/CUnlockListener.h
+        src/CUnlockListener.cpp
 
         common-cpp/src/api/api.h
         common-cpp/src/api/api.cpp
